Fix native-image and openfeign tmdb client